# excel-editor

./: .gitignore  README.md  build_exe.ps1  excel_editor.spec  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-windows-exe.yml
src/excel_editor/: __init__.py  __main__.py  cli.py  editor.py  models.py
src/tests/: test_editor.py  test_prompt.py  test_utils.py
